@@ -18,10 +18,10 @@ package org.finra.herd.service.helper;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Map;
 
 import com.amazonaws.services.s3.event.S3EventNotification;
-import org.apache.commons.lang3.CharEncoding;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -117,7 +117,7 @@ public class SampleDataJmsMessageListener
         {
             // Process messages coming from S3 bucket.
             S3EventNotification s3EventNotification = S3EventNotification.parseJson(payload);
-            String objectKey = URLDecoder.decode(s3EventNotification.getRecords().get(0).getS3().getObject().getKey(), CharEncoding.UTF_8);
+            String objectKey = URLDecoder.decode(s3EventNotification.getRecords().get(0).getS3().getObject().getKey(), StandardCharsets.UTF_8.name());
             long fileSize = s3EventNotification.getRecords().get(0).getS3().getObject().getSizeAsLong();
             // parse the objectKey, it should be in the format of namespace/businessObjectDefinitionName/fileName
             String[] objectKeyArrays = objectKey.split("/");
@@ -155,7 +155,7 @@ public class SampleDataJmsMessageListener
                     HerdJmsDestinationResolver.SQS_DESTINATION_SAMPLE_DATA_QUEUE, payload, e);
         }
     }
-    
+
     /**
      * Converts the specified string from the S3 key format. This implies converting dashes to underscores.
      *
